[FIX] wrong 100vw width creating x overflow

--- a/src/app/components/CircleWaves/styles.module.scss
+++ b/src/app/components/CircleWaves/styles.module.scss
@@ -1,7 +1,7 @@
 $base-circle-size: 100px;
 
 .circle_container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: block;
   position: absolute;
